Corrigindo README.md adicionando providers no composer.json

--- a/composer.json
+++ b/composer.json
@@ -31,5 +31,12 @@
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Crthiago\\LaravelHelpers\\LaravelHelpersServiceProvider"
+            ]
+        }
     }
 }
