Configurando Run PHPinsights no CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,3 +34,6 @@ jobs:
 
     - name: Run test suite
       run: vendor/bin/phpunit
+
+    - name: Run PHPinsights
+      run: vendor/bin/phpinsights -n --ansi --format=github-action
